skindir = $(pkgdatadir)/skins
install_sh_DATA = echo "  INSTALL $$p" && true " >/dev/null " && $(install_sh) -c -m 644
nobase_dist_skin_DATA = \
	big_blue/background.png \
	big_blue/big_audio.png \
	big_blue/big_audio_over.png \
	big_blue/big_background.png \
	big_blue/big_brightness_ctl.png \
	big_blue/big_close.png \
	big_blue/big_close_over.png \
	big_blue/big_close_pressed.png \
	big_blue/big_color_ctl.png \
	big_blue/big_contrast_ctl.png \
	big_blue/big_fwd.png \
	big_blue/big_fwd_over.png \
	big_blue/big_fwd_pressed.png \
	big_blue/big_image.png \
	big_blue/big_image_over.png \
	big_blue/big_imgslider_bg.png \
	big_blue/big_imgslider_ind.png \
	big_blue/big_imgslider_over.png \
	big_blue/big_imgslider_pressed.png \
	big_blue/big_info_bg.png \
	big_blue/big_next.png \
	big_blue/big_next_over.png \
	big_blue/big_next_pressed.png \
	big_blue/big_pause.png \
	big_blue/big_pause_over.png \
	big_blue/big_pause_pressed.png \
	big_blue/big_paused.png \
	big_blue/big_pc_bg.png \
	big_blue/big_pcb_bg.png \
	big_blue/big_play.png \
	big_blue/big_play_over.png \
	big_blue/big_play_pressed.png \
	big_blue/big_playing.png \
	big_blue/big_posbg.png \
	big_blue/big_posslider.png \
	big_blue/big_posslider_over.png \
	big_blue/big_posslider_pressed.png \
	big_blue/big_prev.png \
	big_blue/big_prev_over.png \
	big_blue/big_prev_pressed.png \
	big_blue/big_rew.png \
	big_blue/big_rew_over.png \
	big_blue/big_rew_pressed.png \
	big_blue/big_skin.conf \
	big_blue/big_skin_change.png \
	big_blue/big_skin_change_over.png \
	big_blue/big_skin_change_pressed.png \
	big_blue/big_stop.png \
	big_blue/big_stop_over.png \
	big_blue/big_stop_pressed.png \
	big_blue/big_stopped.png \
	big_blue/big_timebg.png \
	big_blue/big_titlebg.png \
	big_blue/big_volbg.png \
	big_blue/big_volslider.png \
	big_blue/button.png \
	big_blue/close.png \
	big_blue/close_over.png \
	big_blue/close_pressed.png \
	big_blue/next.png \
	big_blue/next_over.png \
	big_blue/next_pressed.png \
	big_blue/pause.png \
	big_blue/pause_over.png \
	big_blue/pause_pressed.png \
	big_blue/paused.png \
	big_blue/play.png \
	big_blue/play_over.png \
	big_blue/play_pressed.png \
	big_blue/playing.png \
	big_blue/posbg.png \
	big_blue/posslider.png \
	big_blue/previous.png \
	big_blue/previous_over.png \
	big_blue/previous_pressed.png \
	big_blue/skin.conf \
	big_blue/stop.png \
	big_blue/stop_over.png \
	big_blue/stop_pressed.png \
	big_blue/stopped.png \
	stealth/background.png \
	stealth/next.png \
	stealth/next_down.png \
	stealth/next_over.png \
	stealth/pause.png \
	stealth/pause_down.png \
	stealth/pause_over.png \
	stealth/paused.png \
	stealth/play.png \
	stealth/play_down.png \
	stealth/play_over.png \
	stealth/playing.png \
	stealth/prev.png \
	stealth/prev_down.png \
	stealth/prev_over.png \
	stealth/quit.png \
	stealth/quit_over.png \
	stealth/seekbar.png \
	stealth/seekpos.png \
	stealth/skin.conf \
	stealth/stop.png \
	stealth/stop_down.png \
	stealth/stop_over.png \
	stealth/stopped.png

.SILENT:
